This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Missing NULL check in unicode_encode_ucs1()
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: izbyshev, methane, miss-islington, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2018-08-19 17:42 by izbyshev, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8823 merged izbyshev, 2018-08-19 17:47
PR 8824 merged miss-islington, 2018-08-19 18:52
PR 8825 merged miss-islington, 2018-08-19 18:52
Messages (6)
msg323762 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-19 17:42
A possible NULL return on out-of-memory condition at Objects/unicodeobject.c:6835 is not handled.

Reported by Svace static analyzer.
msg323764 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-08-19 18:52
New changeset 74a307d48ef8b278c4629ca0ef2139be1c9a34e6 by Serhiy Storchaka (Alexey Izbyshev) in branch 'master':
bpo-34435: Add missing NULL check to unicode_encode_ucs1(). (GH-8823)
https://github.com/python/cpython/commit/74a307d48ef8b278c4629ca0ef2139be1c9a34e6
msg323765 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-08-19 18:53
Thank you for your PR Alexey.
msg323767 - (view) Author: miss-islington (miss-islington) Date: 2018-08-19 20:17
New changeset 1e596d3a20a1a9d1ef15218ef33795bc9e651b7a by Miss Islington (bot) in branch '3.7':
bpo-34435: Add missing NULL check to unicode_encode_ucs1(). (GH-8823)
https://github.com/python/cpython/commit/1e596d3a20a1a9d1ef15218ef33795bc9e651b7a
msg323768 - (view) Author: miss-islington (miss-islington) Date: 2018-08-19 20:19
New changeset e77cdae0f84fc390fed5555ea1f53bbc8746d634 by Miss Islington (bot) in branch '3.6':
bpo-34435: Add missing NULL check to unicode_encode_ucs1(). (GH-8823)
https://github.com/python/cpython/commit/e77cdae0f84fc390fed5555ea1f53bbc8746d634
msg323769 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-19 20:26
Thank you for merging!
History
Date User Action Args
2022-04-11 14:59:04adminsetgithub: 78616
2018-08-19 20:28:13serhiy.storchakasetstatus: open -> closed
stage: patch review -> resolved
2018-08-19 20:26:31izbyshevsetresolution: fixed
messages: + msg323769
2018-08-19 20:19:21miss-islingtonsetmessages: + msg323768
2018-08-19 20:17:57miss-islingtonsetnosy: + miss-islington
messages: + msg323767
2018-08-19 18:53:20serhiy.storchakasettype: behavior
2018-08-19 18:53:08serhiy.storchakasetmessages: + msg323765
2018-08-19 18:52:31miss-islingtonsetpull_requests: + pull_request8304
2018-08-19 18:52:21miss-islingtonsetpull_requests: + pull_request8303
2018-08-19 18:52:06serhiy.storchakasetmessages: + msg323764
2018-08-19 17:47:36izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8302
2018-08-19 17:42:35izbyshevcreate